# StructTemplates

./: .gitignore
task_1/: CMakeLists.txt  main.cpp
task_1/lib/: decorator.hpp
task_2/: CMakeLists.txt  main.cpp
task_2/lib/: proxy.hpp
